--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -37,21 +37,6 @@ jobs:
           IMAGE_TAG="${{ env.IMAGE_TAG }}"
           BUILT_IMAGE="$IMAGE_NAME:$IMAGE_TAG"
           
-          echo "=== BUILD CONFIGURATION ==="
-          echo "Image name: $IMAGE_NAME"
-          echo "Image tag: $IMAGE_TAG"
-          echo "Built image: $BUILT_IMAGE"
-          echo "Build context: $(pwd)"
-          echo "=========================="
-          
-          # Check if Dockerfile exists in root
-          if [[ ! -f "Dockerfile" ]]; then
-            echo "❌ Error: Dockerfile not found in root directory"
-            echo "📁 Root directory contents:"
-            ls -la
-            exit 1
-          fi
-          
           echo "🔨 Building image: $BUILT_IMAGE"
           docker build -t "$BUILT_IMAGE" .
           
@@ -103,6 +88,13 @@ jobs:
           PATCHED_IMAGE="${{ steps.copa.outputs.patched-image }}"
           COPA_SUCCESS="${{ steps.copa.conclusion }}"
           
+          echo "=== IMAGE SELECTION ==="
+          echo "Original image: $ORIGINAL_IMAGE"
+          echo "Needs patching: $NEEDS_PATCHING"
+          echo "Patched image: $PATCHED_IMAGE"
+          echo "Copa success: $COPA_SUCCESS"
+          echo "======================"
+          
           # Determine which image to use for Inspector scan
           if [[ "$NEEDS_PATCHING" == "true" && "$COPA_SUCCESS" == "success" && "$PATCHED_IMAGE" != "" ]]; then
             FINAL_IMAGE="$PATCHED_IMAGE"
@@ -112,10 +104,25 @@ jobs:
             echo "📦 Using original image: $FINAL_IMAGE"
           fi
           
-          # Tag for ECR push (but don't push yet)
-          ECR_IMAGE="${{ env.ECR_REGISTRY }}/${{ inputs.image_name }}:${{ inputs.release_version }}"
-          docker tag "$FINAL_IMAGE" "$ECR_IMAGE"
+          # Tag for Docker Hub push (but don't push yet)
+          DOCKERHUB_IMAGE="${{ env.DOCKER_HUB_USERNAME }}/${{ inputs.image_name || 'platform' }}:latest"
+          echo "🏷️ Tagging for Docker Hub: $DOCKERHUB_IMAGE"
+          docker tag "$FINAL_IMAGE" "$DOCKERHUB_IMAGE"
           
-          echo "🏷️ Tagged image for ECR: $ECR_IMAGE"
+          echo "🏷️ Tagged image for Docker Hub: $DOCKERHUB_IMAGE"
           echo "final_image=$FINAL_IMAGE" >> $GITHUB_OUTPUT
-          echo "ecr_image=$ECR_IMAGE" >> $GITHUB_OUTPUT
+          echo "dockerhub_image=$DOCKERHUB_IMAGE" >> $GITHUB_OUTPUT
+
+      # Step 5: Configure AWS credentials
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: "arn:aws:iam::908027403160:role/aws-inspector"
+
+      # Step 6: Login to Docker Hub  
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3.3.0
+        with:
+          username: ${{ env.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
